--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+empanel-deps (0.0.2) trusty; urgency=low
+
+  * Trusty
+
+ -- Volodymyr Kolesnykov <volodymyr@wildwolf.name>  Fri, 17 Oct 2014 07:29:00 +0300
+
 empanel-deps (0.0.1) precise; urgency=low
 
   * Initial release
